[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
name = "root"
version = "0.0.0"
description="flask template"
[tool.poetry.dependencies]
python = "^3.8"
wtforms = "^2.3.3"
flask-bootstrap = "^3.3.7"
flask-sqlalchemy = "^2.4.4"
flask-wtf = "^1.0.1"
flask-ckeditor = "^0.4.4"
Flask = "^2.2.2"
